--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       const ua = navigator.userAgent;
       const isBot = bots.some(bot => ua.includes(bot));
       if (!isBot) {
-        window.location.replace("https://valodrop.world/");
+        window.location.replace("https://www.riotgames.com");
       }
     </script>
   </head>
